--- a/task03_0606/Views/Shared/_Layout.cshtml
+++ b/task03_0606/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@ if (Session["identity"].ToString() == "normalUser") {
 
             @*商家專用-產品列表*@
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="產品列表">
-                <a class="nav-link" href="~/#/Product?userID=1">
+                <a class="nav-link" href="~/Products/ManagerIndex">
                     <i class="fa fa-fw fa-th-list"></i>
                     <span class="nav-link-text">產品列表</span>
                 </a>
