--- a/task03_0606/Views/Member/MemberTable.cshtml
+++ b/task03_0606/Views/Member/MemberTable.cshtml
@@ -64,7 +64,7 @@
                     </table>
                 </div>
             </div>
-            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+            <div class="card-footer small text-muted">更新時間 @DateTime.Now.ToLocalTime().ToString()</div>
         </div>
     </div>
     <!-- /.container-fluid-->
@@ -72,7 +72,7 @@
     <footer class="sticky-footer">
         <div class="container">
             <div class="text-center">
-                <small>Copyright © Your Website 2018</small>
+                <small>© SMIT 04</small>
             </div>
         </div>
     </footer>
