--- a/task03_0606/Views/Order/Order_list_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_list_bussiness.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<task03_0606.Models.Order>
+﻿@model List<task03_0606.Models.OrderModels.Orderlist>
 @{
     ViewBag.Title = "Order_list_bussiness";
 
