--- a/task03_0606/Views/Order/Order_list_history_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_list_history_bussiness.cshtml
@@ -81,7 +81,9 @@
                             <td> @order.tableId</td>
                             <td> @orderTotalAmount</td>
                             <td>@(order.orderState == 2 ? "訂單完成" : "待出餐") </td>
-                            <td> <button class="btn btn-warning" onclick="changeState()" >未出餐</button> </td>
+                            <td> <button class="btn btn-md btn-warning" data-action="changeState" data-orderid="@order.orderId">未出餐</button>  
+                                 <button class="btn btn-md btn-danger" data-action="cancelOrder"  data-orderid="@order.orderId">作廢</button>
+                            </td>
                         </tr>
                                 }
                             }
@@ -168,16 +170,36 @@
     }
 
 
-    $(document).ready(function () {
-        let today = new Date().toISOString().substr(0, 10);
-        document.querySelector("#beginDate").value = today;
-        document.querySelector("#endDate").value = today;
+    //$(document).ready(function () {
+    //    let today = new Date().toISOString().substr(0, 10);
+    //    document.querySelector("#beginDate").value = today;
+    //    document.querySelector("#endDate").value = today;
+    //})
+
+    
+    $(".btn.btn-md").click(function (){
+        console.log($(this).data("action") + $(this).data("orderid"));
+        
+
+        $.ajax({
+            method:"post",
+            url: '@Url.Action()',
+            data: {
+                orderId: $(this).data("orderid"),
+                action: $(this).data("action")
+            }
+        }).done(function () {
+            $(this).attr('disabled', true);
+        })
+
     })
 
-    function changeState() {
-        $('#exampleModalCenter').modal('hide');
-        alert("test");
-    }
+    $(".btn.btn-danger").click(function (){
+        console.log( $(this).data("orderid"));
+        $(this).attr('disabled', true);
+    })
+
+   
 
 
     //點選訂單，浮出Modal訂單明細
