--- a/task03_0606/Views/Order/Order_deteail_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_deteail_bussiness.cshtml
@@ -169,9 +169,9 @@
      }
 
      $(function () {
-         alert("1 OK")
+         //alert("1 OK")
          var chat = $.connection.storeHub;
-         alert("2 OK")
+         //alert("2 OK")
          chat.client.addNewMessageToPage = function (newOrderData) {
              //alert(test);
              //alert(newOrderData);
