--- a/task03_0606/Views/Order/Order_list_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_list_bussiness.cshtml
@@ -61,7 +61,7 @@
 
 
                                     </div>
-                                    <div class="col-xs-1" data-status="@detail.productionStatus"></div>
+                                    <div class="col-xs-1" data-status="@detail.productionStatus">@detail.Order.orderState</div>
                                 </div>
                             </li>
                         }
