--- a/task03_0606/Views/Order/Order_list_history_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_list_history_bussiness.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<task03_0606.Models.Order>
+﻿@model List<task03_0606.Models.OrderModels.Orderlist>
 @{
     ViewBag.Title = "Order_list_history_bussiness";
 }
@@ -58,19 +58,23 @@
 
                         @foreach (var order in Model)
 
+                        {
+                            using (task03_0606.Models.FoodCourtDBEntities db = new task03_0606.Models.FoodCourtDBEntities())
                             {
-                                using (task03_0606.Models.FoodCourtDBEntities db = new task03_0606.Models.FoodCourtDBEntities())
+                                string stroeId = Session["storeId"].ToString();
+                                var orderDetailList = (from o in db.OrderDetials
+                                                       where o.orderId == order.orderId && o.Product.storeId == stroeId
+                                                       select o).ToList();
+
+                                var orderTotalAmount = 0;
+                                var orderComplete = orderDetailList.Count*2;
+                                var totalProductState = 0;
+                                foreach (var orderDetail in orderDetailList)
                                 {
-                                    string stroeId = Session["storeId"].ToString();
-                                    var orderDetailList = (from o in db.OrderDetials
-                                                           where o.orderId == order.orderId && o.Product.storeId == stroeId
-                                                           select o).ToList();
-                                    var orderTotalAmount = 0;
-                                    foreach (var orderDetail in orderDetailList)
-                                    {
-                                        orderTotalAmount += (orderDetail.productCount * orderDetail.Product.productPrice);
-                                    }
-                                    
+                                    orderTotalAmount += (orderDetail.productCount * orderDetail.Product.productPrice);
+                                    totalProductState += orderDetail.productionStatus;
+                                            }
+
                         <tr >
                             <td><a href="#" class="orderListItem" data-orderid="@order.orderId" data-orderiddate="@string.Format("{0:yyyyMMdd}{1}", Convert.ToDateTime(order.orderDate), (order.orderId + 10000))">
                                 @string.Format("{0:yyyyMMdd}{1}", Convert.ToDateTime(order.orderDate), (order.orderId + 10000))
@@ -80,8 +84,13 @@
                             <td> @order.phoneNum</td>
                             <td> @order.tableId</td>
                             <td> @orderTotalAmount</td>
-                            <td>@(order.orderState == 2 ? "訂單完成" : "待出餐") </td>
-                            <td> <button class="btn btn-md btn-warning" data-action="changeState" data-orderid="@order.orderId">未出餐</button>  
+                            <td>@(totalProductState == orderComplete ? "訂單完成" : "待出餐") </td>
+                            <td> 
+                                @if (totalProductState == orderComplete)
+                                {<button class="btn btn-md btn-warning" data-action="changeState" data-orderid="@order.orderId">未出餐</button> }
+                                else
+                                { <button class="btn btn-md btn-warning" data-action="changeState" data-orderid="@order.orderId" disabled>未出餐</button>   }
+                               
                                  <button class="btn btn-md btn-danger" data-action="cancelOrder"  data-orderid="@order.orderId">作廢</button>
                             </td>
                         </tr>
@@ -179,29 +188,23 @@
     
     $(".btn.btn-md").click(function (){
         console.log($(this).data("action") + $(this).data("orderid"));
-        
-
+        console.log(this);
         $.ajax({
             method:"post",
-            url: '@Url.Action()',
+            url: '@Url.Action("Order_list_history_edit_bussiness","Order")',
             data: {
                 orderId: $(this).data("orderid"),
                 action: $(this).data("action")
             }
         }).done(function () {
+            if ($(this).data("action") == "changeState") { alert("已修改訂單產品狀態") }
+            if ($(this).data("action") == "cancelOrder") { alert("訂單刪除") }
+           
             $(this).attr('disabled', true);
         })
-
-    })
-
-    $(".btn.btn-danger").click(function (){
-        console.log( $(this).data("orderid"));
-        $(this).attr('disabled', true);
     })
 
    
-
-
     //點選訂單，浮出Modal訂單明細
     $(".orderListItem").click(function () {
         //alert($(this).data("orderid"));
