圖片預覽上傳

--- a/task03_0606/Views/Products/ManagerIndex.cshtml
+++ b/task03_0606/Views/Products/ManagerIndex.cshtml
@@ -14,7 +14,7 @@
         <!-- Example DataTables Card-->
         <div class="card mb-3">
             <div class="card-header">
-                <h1><i class="fa fa-table"></i><a href="" class="white-text mx-3">產品列表</a><a class="pull-right btn btn-warning text-primary" id="create" href="/Products/Create">
+                <h1><i class="fa fa-table"></i><a href="" class="white-text mx-3">產品列表</a><a class="pull-right btn btn-warning text-primary" id="create" href="/Member/AddNewProduct">
     <i class="fa fa-plus" aria-hidden="true"></i>
     新增產品
 </a></h1>
