--- a/task03_0606/Views/Member/AddNewProduct.cshtml
+++ b/task03_0606/Views/Member/AddNewProduct.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>新增商品</h2>
+<h2 class="text-center">新增商品</h2><hr />
 <div class="container">
     <form method="post" action="" id="productForm" enctype="multipart/form-data">
         <div class="form-row">
