--- a/task03_0606/Views/Products/Delete.cshtml
+++ b/task03_0606/Views/Products/Delete.cshtml
@@ -10,7 +10,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            <h4>Product</h4>
+            <h4>刪除產品</h4>
         </dt>
         @*productID=o.productID,
             productName=o.productName ,
@@ -63,8 +63,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "ManagerIndex")
+            <input type="submit" value="刪除" class="btn btn-default" /> |
+            @Html.ActionLink("回產品列表", "ManagerIndex")
         </div>
     }
 </div>
