--- a/task03_0606/Views/Products/Edit.cshtml
+++ b/task03_0606/Views/Products/Edit.cshtml
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                         <div>
-                            <i class="fa fa-heart"></i> @Html.ActionLink("Back to List回商品列表", "ManagerIndex")
+                            <i class="fa fa-heart"></i> @Html.ActionLink("回商品列表", "ManagerIndex")
                         </div>
 
 
@@ -110,42 +110,9 @@
                     </div>
 
                     <div class="col-md-8 banner-sec">
-                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                            </ol>
-                            <div class="carousel-inner" role="listbox">
-                                <div class="carousel-item active">
-                                    <img class="d-block img-fluid" src="https://static.pexels.com/photos/33972/pexels-photo.jpg" alt="First slide">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <div class="banner-text">
-                                            <h2>This is Heaven</h2>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="https://images.pexels.com/photos/7097/people-coffee-tea-meeting.jpg" alt="First slide">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <div class="banner-text">
-                                            <h2>This is Heaven</h2>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="https://images.pexels.com/photos/872957/pexels-photo-872957.jpeg" alt="First slide">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <div class="banner-text">
-                                            <h2>This is Heaven</h2>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
+                        <div class="col-md">
+                            <label for="previewImg">商品照片預覽</label><br />
+                            <img id="previewImg" src="~/photo/@ViewBag.result.productPicture" width="300" />
                         </div>
 
                     </div>
